--- a/k8s-chart/k8s-demo/templates/deployment.yaml
+++ b/k8s-chart/k8s-demo/templates/deployment.yaml
@@ -33,6 +33,11 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            {{- if .Values.appVersion }}
+            - name: appVersion
+              value: {{ .Values.appVersion }}
+            {{- end }}
           ports:
             - name: http
               containerPort: {{ .Values.containerPort }}
