--- a/user-provider/src/main/resources/application.properties
+++ b/user-provider/src/main/resources/application.properties
@@ -8,3 +8,8 @@ appVersion=v1
 book-provider.url=http://localhost:8082
 
 jpa-provider.url=http://localhost:8083
+
+
+# test configmap
+configmap.name=test
+configmap.info=test
